Upload project to GitHub